chore(doc): requestb.in online is dead
add link to github projet - install docker version

--- a/README.adoc
+++ b/README.adoc
@@ -23,6 +23,7 @@ Vers l'OWASP et au-delà :
 . chrome
 . IDE
 . un client REST (Postman, ...)
+. requestbin (https://github.com/Runscope/requestbin#readme) en version docker
 
 == Préparation
 
